added link in the .html  template to link to Security Architecture documentation

--- a/docs/templates/frontend-docs.html
+++ b/docs/templates/frontend-docs.html
@@ -52,6 +52,7 @@
       'Sections': [
         { label: 'API Layer', href: 'src/api/overview.html' },
         { label: 'Components', href: 'src/components/overview.html' },
+        { label: 'Security', href: 'src/security/overview.html' },
         { label: 'Pages', href: 'src/pages/overview.html' },
         { label: 'Services', href: 'src/services/overview.html' },
         { label: 'Localization (i18n)', href: 'src/i18n/overview.html' },
